Fix spacing of contact on mobile

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -103,4 +103,7 @@ body {
 	.miniText {
 		display: none;
 	}
+	#contact {
+		margin-bottom: 20px;
+	}
 }
